--- a/buspain/AndroidManifest.xml
+++ b/buspain/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:debuggable="true"
